k8s/apps/withoutbg/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: withoutbg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: withoutbg
  namespace: withoutbg
  labels:
    app.kubernetes.io/name: withoutbg
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: withoutbg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: withoutbg
    spec:
      containers:
        - name: withoutbg
          image: withoutbg/app:1.3.1@sha256:6aae7b11c45f2ad90fc03a57c98f9e9b80d7edf9e97f66d835ce989e1b52e4cf
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "1Gi"
              cpu: "25m"
            limits:
              memory: "3Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: withoutbg
  namespace: withoutbg
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  selector:
    app.kubernetes.io/name: withoutbg
  ports:
    - port: 80
      targetPort: 80
      name: http
